--- a/src/main/java/view/HomeView.form
+++ b/src/main/java/view/HomeView.form
@@ -57,13 +57,17 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jButtonTipoDeAnimal" min="-2" pref="291" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButtonRacas" pref="291" max="32767" attributes="0"/>
+                      <Component id="jButtonRacas" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButtonAdotante" alignment="1" min="-2" pref="291" max="-2" attributes="0"/>
                           <Component id="jButtonDoador" alignment="1" min="-2" pref="291" max="-2" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="jButtonConsumivel" min="-2" pref="291" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jButtonAdotante" min="-2" pref="291" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
@@ -80,7 +84,10 @@
                   <Component id="jButtonRacas" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButtonAdotante" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jButtonAdotante" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jButtonConsumivel" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jButtonDoador" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="106" max="32767" attributes="0"/>
@@ -119,6 +126,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonDoadorActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonConsumivel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Consumivel"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonConsumivelActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
