--- a/src/main/java/view/ConsumivelView.form
+++ b/src/main/java/view/ConsumivelView.form
@@ -41,21 +41,18 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonCancelar" pref="116" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabelID" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabelNome" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabelNascimento" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jTextFieldQuantidade" max="32767" attributes="0"/>
                           <Component id="jTextFieldNome" max="32767" attributes="0"/>
                           <Component id="jTextFieldID" max="32767" attributes="0"/>
                       </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabelNascimento" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jTextFieldQuantidade" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
